--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,7 @@ a {
     height: 30px;
     width: 500px;
     font-size: 16px;
+    border: 2px solid black;
 }
 
                     /* introduction */
