--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,6 @@ a {
     /* border: 1px solid red; */
 }
 
-.login-text:hover{
-    color: darkslategray;
-}
-
                     /* logo-search */
 .logo-search {
     margin: 0 0 20px 0;
@@ -79,9 +75,11 @@ a {
     width: 500px;
     font-size: 16px;
     border: 2px solid black;
+    
+    padding: 5px 10px 5px 10px;
 }
 
                     /* introduction */
-.introduction-section {
+.introduction {
     border-top: 2px solid #ebebeb;
 }
