아이콘 적용
font awesome

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@
 @import "login.css";
 @import "search.css";
 @import "menu.css";
+@import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
