--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,11 @@
 
+.login-logo{
+    font-size: 50px;
+}
+
 .login-bar {
-    margin: 5px auto 5px auto;
+    margin: 5px 0 5px 6px;
+    padding: 3px 5px 3px 5px;
 
     height: 20px;
     width: 200px;
@@ -8,6 +13,15 @@
 }
 
 .login-btn{
-    height: 25px;
-    width: 205px;
+    width: 215px;
+    height: 31px;
+}
+
+.login-logo, .login-bars, .login-under{
+    text-align: center;
+    margin-top: 50px;
+}
+
+.login-logo{
+    margin: 110px 0 0 0;
 }
