--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,12 @@ a {
 
                     /* top-header */
 .top-header{
-    margin: 10px 15px 0 0;
+    /* margin: 5px 15px 0px 0; */
 }
 
 .login-text {
-    line-height: 45%;
+    /* line-height: 45%; */
+    margin: 5px 15px 1px 0;
     float: right;
 
     font-size: 14px;
@@ -19,14 +20,19 @@ a {
 
                     /* logo-search */
 .logo-search {
-    margin: 0 0 20px 0;
-    width: 100%;
+    width: 82%;
     height: 100px;
+    margin: 0% auto 40px auto;
+    padding: 40px 10% 40px 10%;
 
     /* 가운데 정렬 */
     display: flex;
     visibility: visible;
 
+    background-image: url("../images/place4.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: 100%;
     /* border: 1px solid red; */
 }
 
@@ -58,28 +64,206 @@ a {
 .sub-logo {
     /* 레이아웃 */
     margin: 8px 10px 0 10px;
+    padding: 1px 0px 0px 1px;
     min-width: 80px;
     max-width: 140px;
-
+    
     font-size: 24px;
-    color: black;
+    font-weight: bold;
+    color: rgb(24, 24, 24);
+    background-color: rgba(240, 240, 240, 0.1);
+    border-bottom: 1.5px solid rgb(24, 24, 24);
+    border-right: 1.5px solid rgb(24, 24, 24);
+    opacity: 1;
 
+    animation: breath-color 66s infinite;
+
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
     /* border: 1px solid red; */
 }
 
-.search-bar{
+.search-bar {
     /* 가운데 정렬 */
-    margin: 45px auto 0 auto;
+    margin: 45px 0 0 auto;
 
+    width: 480px;
     height: 30px;
-    width: 500px;
     font-size: 16px;
-    border: 2px solid black;
-    
+    border: 2px solid rgba(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.8);
+
     padding: 5px 10px 5px 10px;
 }
 
+.search-bar-icon{
+    width: 40px;
+    height: 36px;
+    margin: 45px auto 0 0;
+    padding: 4px 0 0 5px;
+
+    color: white;
+    border: 2px solid black;
+    background-color: rgba(120, 120, 120, 0.8);
+
+    cursor: pointer;
+}
+
                     /* introduction */
-.introduction {
-    border-top: 2px solid #ebebeb;
+.introduction1 {
+    height: 450px;
+
+}
+
+.introduction2 {
+    height: 450px;
+}
+
+hr {
+    width: 100%;
+    height: 2px;
+
+    border: 0px;
+    background-color: gray;
+}
+
+@keyframes breath-color{
+    0% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.1);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        opacity: 1;
+    }
+
+    8% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    11% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    17% {
+        /* color: rgb(162, 183, 224); */
+        color: rgb(168, 240, 177);
+        background-color: rgba(120, 120, 120, 0.3);
+        border-bottom: 1.5px solid rgb(168, 240, 177);
+        border-right: 1.5px solid rgb(168, 240, 177);
+        text-shadow: 0 0 2px #000000;
+        opacity: 1;
+    }
+
+    25% {
+        /* color: rgb(162, 183, 224); */
+        color: rgb(168, 240, 177);
+        background-color: rgba(120, 120, 120, 0.1);
+        border-bottom: 1.5px solid rgba(168, 240, 177);
+        border-right: 1.5px solid rgba(168, 240, 177);
+        text-shadow: 0 0 2px #000000;
+        opacity: 0.8;
+    }
+
+    33% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    36% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    42% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.3);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        text-shadow: 0 0 0px #00000000;
+        opacity: 1;
+    }
+
+    50% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.1);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        opacity: 1;
+    }
+
+    58% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    61% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    67% {
+        color: rgb(241, 181, 166);
+        background-color: rgba(120, 120, 120, 0.3);
+        border-bottom: 1.5px solid rgb(241, 181, 166);
+        border-right: 1.5px solid rgb(241, 181, 166);
+        text-shadow: 0 0 2px #000000;
+        opacity: 1;
+    }
+
+    75% {
+        color: rgb(241, 181, 166);
+        background-color: rgba(120, 120, 120, 0.1);
+        border-bottom: 1.5px solid rgb(241, 181, 166);
+        border-right: 1.5px solid rgb(241, 181, 166);
+        text-shadow: 0 0 2px #000000;
+        opacity: 0.8;
+    }
+
+    83% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    86% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    92% {
+        color: rgb(24, 24, 24, 1);
+        background-color: rgba(240, 240, 240, 0.3);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        text-shadow: 0 0 0px #00000000;
+        opacity: 1;
+    }
 }
