--- a/css/index.css
+++ b/css/index.css
@@ -105,9 +105,9 @@ a {
     margin: 45px auto 0 0;
     padding: 4px 0 0 5px;
 
-    color: white;
+    color: rgba(255, 255, 255, 0.7);
     border: 2px solid rgba(60, 60, 60, 0.8);
-    background-color: rgba(60, 60, 60, 0.8);
+    background-color: rgba(60, 60, 60, 0.5);
 
     cursor: pointer;
 }
