--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,12 @@ a {
 }
 
 .top-header {
-    background-color: gray;
+    background-color: rgb(190, 159, 133);
 }
 
 .login-text {
     /* line-height: 45%; */
-    margin: 1px 15px 1px 0;
+    margin: 1px 25px 1px 0;
     float: right;
 
     font-size: 14px;
@@ -29,9 +29,9 @@ a {
                     /* logo-search */
 .logo-search {
     width: 80%;
-    height: 170px;
+    height: 240px;
     margin: 0 auto 0 auto;
-    padding: 40px 10% 40px 10%;
+    padding: 40px 15% 40px 5%;
 
     /* 가운데 정렬 */
     display: flex;
@@ -71,7 +71,7 @@ a {
 
 .sub-logo {
     /* 레이아웃 */
-    margin: 15px 10px 0 10px;
+    margin: 0px 40px 0 10px;
     padding: 1px 0px 0px 1px;
     min-width: 80px;
     max-width: 140px;
@@ -97,32 +97,34 @@ a {
 
 .search-bar {
     /* 가운데 정렬 */
-    margin: 52px 0 0 auto;
+    margin: 130px 0 0 auto;
 
     width: 480px;
     height: 30px;
-    font-size: 16px;
+    font-size: 18px;
     border: 2px solid rgba(60, 60, 60, 0.8);
     background-color: rgba(255, 255, 255, 0.8);
 
-    padding: 5px 10px 5px 10px;
+    padding: 8px 12px 8px 12px;
 }
 
 .search-bar-icon{
-    width: 40px;
+    /* 가운데 정렬 */
+    margin: 130px auto 0 0;
+
+    width: 50px;
     height: 36px;
-    margin: 52px auto 0 0;
-    padding: 4px 0 0 5px;
+    padding: 8px 0 0 8px;
 
     color: rgba(255, 255, 255, 0.7);
     border: 2px solid rgba(60, 60, 60, 0.8);
-    background-color: rgba(60, 60, 60, 0.5);
+    background-color: rgba(166, 123, 91, 0.6);
 
     cursor: pointer;
 }
 
                     /* introduction */
-.introductions {
+/* .introductions {
     height: 800px;
     padding-top: 10px;
 
@@ -131,16 +133,16 @@ a {
     background-size: 100%;
 
     filter: grayscale();
-}
+} */
 
-.icon-sns {
+/* .icon-sns {
     margin-right: 25px;
 
     color: white;
-}
+} */
 
 /* 스크롤하면 옆에서 나오는 애니메이션 + 사라지는 애니메이션*/
-.introduction {
+/* .introduction {
     width: 100%;
     height: 60px;
     margin: 50px 0 50px 0;
@@ -150,16 +152,16 @@ a {
     font-size: 22px;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 1px #dddddd;
-}
+} */
 
-.introduction-left {
+/* .introduction-left {
     padding: 0 0 0 20px;
 }
 
 .introduction-right{
     float: right;
     padding: 0 20px 0 0px;
-}
+} */
 
 hr {
     width: 100%;
@@ -171,10 +173,24 @@ hr {
 
                     /* ETC */
 
-.side{
+.side-top, .side-bottom{
     width: 100%;
-    background-color: rgb(20, 20, 20);
+}
+
+.side-top{
+    /* background-color: rgb(20, 20, 20); */
     height: 25px;
+    border-top-left-radius: 45%;
+
+    background-color: rgb(44, 44, 44);
+}
+
+.side-bottom{
+    height: 50px;
+
+    /* border-bottom-left-radius: 90%;
+    border-bottom-right-radius: 90%; */
+    background-color: rgb(166, 123, 91);
 }
 
 @keyframes breath-color{
