--- a/css/index.css
+++ b/css/index.css
@@ -1,334 +1,129 @@
 
-a {
-    text-decoration: none;
+body {
+    margin: 0;
 }
 
-                    /* top-header */
-.top-header{
-    /* margin: 5px 15px 0px 0; */
-}
+.background-img {
+    position: absolute;
+    z-index: 2;
 
-.top-header {
-    background-color: rgb(190, 159, 133);
-}
-
-.login-text {
-    /* line-height: 45%; */
-    margin: 1px 25px 1px 0;
-    float: right;
-
-    font-size: 14px;
-    color: white;
-    /* border: 1px solid red; */
-}
-
-.login-text:hover{
-    text-decoration: underline;
-}
-
-                    /* logo-search */
-.logo-search {
-    width: 80%;
-    height: 240px;
-    margin: 0 auto 0 auto;
-    padding: 40px 15% 40px 5%;
-
-    /* 가운데 정렬 */
-    display: flex;
-    visibility: visible;
+    width: 100%;
+    height: 600px;
 
     background-image: url("../images/place4.jpg");
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-position-x: -20px; 
+    background-size: 110% 110%;
+
+    filter: blur(1.1px);
+}
+
+.translucent-layer {
+    position: absolute;
+    z-index: 3;
+
+    width: 100%;
+    height: 600px;
+
+    background-color: rgba(58, 58, 58, 0.38);
+}
+
+.contents {
+    position: absolute;
+    z-index: 4;
+    
+    width: 100%;
+    height: 600px;
+
     /* border: 1px solid red; */
 }
 
-/* .logo { */
-    /* 레이아웃 */
-    /* line-height: 90%; */
+.top {
+    margin: 8px 60px 0 0;
 
-    /* 가운데 정렬 */
-    /* margin: auto;
+    float: right;
+}
 
-    font-size: 42px;
-    color: black;
+.login-btn {
+    padding: 2px 7px 2px 7px;
 
-    display: inline; */
+    color: white;
+    text-shadow: 0 0 3px rgba(222, 222, 222, 1);
+    font-size: 16px;
 
     /* border: 1px solid red; */
-/* } */
+}
+
+.logo {
+    margin: 150px 0 0 0;
+
+    /* border: 1px solid red; */
+}
+
+.logo-table {
+    width: 100%;
+
+    text-align: center;
+
+    /* border: 1px solid red; */
+}
+
+.logo-text { 
+    width: 500px;
+
+    color: rgba(255, 255, 255, 0.6);
+    text-shadow: 0 0 7px rgba(222, 222, 222, 0.6);
+    font-size: 80px;
+
+    animation: breath-color 16s infinite;
+    /* border: 1px solid red; */
+}
 
 .search {
-    width: 100%;
-    margin-right: 160px;
+    margin: 50px 0 0 0;
 
-    /* 가운데 정렬 */
-    display: flex;
+    text-align: center;
 
-    /* border: 1px solid red; */
-}
-
-.sub-logo {
-    /* 레이아웃 */
-    margin: 0px 40px 0 10px;
-    padding: 1px 0px 0px 1px;
-    min-width: 80px;
-    max-width: 140px;
-    height: 90px;
-    
-    font-size: 24px;
-    font-weight: bold;
-    color: rgb(24, 24, 24);
-    background-color: rgba(240, 240, 240, 0.1);
-    border-bottom: 1.5px solid rgb(24, 24, 24);
-    border-right: 1.5px solid rgb(24, 24, 24);
-    opacity: 1;
-
-    animation: breath-color 62s infinite;
-
-    -webkit-touch-callout: none;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
     /* border: 1px solid red; */
 }
 
 .search-bar {
-    /* 가운데 정렬 */
-    margin: 130px 0 0 auto;
+    padding: 5px 10px 5px 10px;
 
     width: 480px;
-    height: 30px;
-    font-size: 18px;
-    border: 2px solid rgba(60, 60, 60, 0.8);
-    background-color: rgba(255, 255, 255, 0.8);
+    height: 45px;
 
-    padding: 8px 12px 8px 12px;
+    font-size: 30px;
+    color: rgba(40, 40, 40, 0.9);
+
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 5px solid rgba(120, 120, 120, 0.9);
 }
 
-.search-bar-icon{
-    /* 가운데 정렬 */
-    margin: 130px auto 0 0;
-
-    width: 50px;
-    height: 36px;
-    padding: 8px 0 0 8px;
-
-    color: rgba(255, 255, 255, 0.7);
-    border: 2px solid rgba(60, 60, 60, 0.8);
-    background-color: rgba(166, 123, 91, 0.6);
-
-    cursor: pointer;
-}
-
-                    /* introduction */
-/* .introductions {
-    height: 800px;
-    padding-top: 10px;
-
-    background-image: url("../images/item2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-
-    filter: grayscale();
-} */
-
-/* .icon-sns {
-    margin-right: 25px;
-
+/* .search-icon {
+    padding: 10px;
     color: white;
+
+    border: 3px solid red;
 } */
-
-/* 스크롤하면 옆에서 나오는 애니메이션 + 사라지는 애니메이션*/
-/* .introduction {
-    width: 100%;
-    height: 60px;
-    margin: 50px 0 50px 0;
-
-    line-height: 25px;
-    background-color: rgba(20, 20, 20, 0.8);
-    font-size: 22px;
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0 1px #dddddd;
-} */
-
-/* .introduction-left {
-    padding: 0 0 0 20px;
-}
-
-.introduction-right{
-    float: right;
-    padding: 0 20px 0 0px;
-} */
-
-hr {
-    width: 100%;
-    height: 2px;
-
-    border: 0px;
-    background-color: gray;
-}
-
-                    /* ETC */
-
-.side-top, .side-bottom{
-    width: 100%;
-}
-
-.side-top{
-    /* background-color: rgb(20, 20, 20); */
-    height: 25px;
-    border-top-left-radius: 45%;
-
-    background-color: rgb(44, 44, 44);
-}
-
-.side-bottom{
-    height: 50px;
-
-    /* border-bottom-left-radius: 90%;
-    border-bottom-right-radius: 90%; */
-    background-color: rgb(166, 123, 91);
-}
 
 @keyframes breath-color{
-    0% {
-        color: rgb(24, 24, 24);
-        background-color: rgba(240, 240, 240, 0.1);
-        border-bottom: 1.5px solid rgb(24, 24, 24);
-        border-right: 1.5px solid rgb(24, 24, 24);
-        opacity: 1;
+    0%{
+        color: rgba(255, 255, 255, 0.6);
+        text-shadow: 0 0 7px rgba(222, 222, 222, 0.6);
     }
 
-    8% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.3);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
+    45%{
+        color: rgba(255, 255, 255, 0.6);
+        text-shadow: 0 0 7px rgba(222, 222, 222, 0.6);
     }
 
-    11% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.1);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
+    60%{
+        color: rgba(255, 255, 255, 0.1);
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.1);
     }
 
-    17% {
-        /* color: rgb(162, 183, 224); */
-        color: rgb(168, 240, 177);
-        background-color: rgba(120, 120, 120, 0.3);
-        border-bottom: 1.5px solid rgb(168, 240, 177);
-        border-right: 1.5px solid rgb(168, 240, 177);
-        text-shadow: 0 0 2px #000000;
-        opacity: 1;
-    }
-
-    25% {
-        /* color: rgb(162, 183, 224); */
-        color: rgb(168, 240, 177);
-        background-color: rgba(120, 120, 120, 0.1);
-        border-bottom: 1.5px solid rgba(168, 240, 177);
-        border-right: 1.5px solid rgba(168, 240, 177);
-        text-shadow: 0 0 2px #000000;
-        opacity: 0.8;
-    }
-
-    33% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.3);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    36% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.1);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    42% {
-        color: rgb(24, 24, 24);
-        background-color: rgba(240, 240, 240, 0.3);
-        border-bottom: 1.5px solid rgb(24, 24, 24);
-        border-right: 1.5px solid rgb(24, 24, 24);
-        text-shadow: 0 0 0px #00000000;
-        opacity: 1;
-    }
-
-    50% {
-        color: rgb(24, 24, 24);
-        background-color: rgba(240, 240, 240, 0.1);
-        border-bottom: 1.5px solid rgb(24, 24, 24);
-        border-right: 1.5px solid rgb(24, 24, 24);
-        opacity: 1;
-    }
-
-    58% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.3);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    61% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.1);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    67% {
-        color: rgb(241, 181, 166);
-        background-color: rgba(120, 120, 120, 0.3);
-        border-bottom: 1.5px solid rgb(241, 181, 166);
-        border-right: 1.5px solid rgb(241, 181, 166);
-        text-shadow: 0 0 2px #000000;
-        opacity: 1;
-    }
-
-    75% {
-        color: rgb(241, 181, 166);
-        background-color: rgba(120, 120, 120, 0.1);
-        border-bottom: 1.5px solid rgb(241, 181, 166);
-        border-right: 1.5px solid rgb(241, 181, 166);
-        text-shadow: 0 0 2px #000000;
-        opacity: 0.8;
-    }
-
-    83% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.3);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    86% {
-        color: rgba(255, 255, 255, 1);
-        background-color: rgba(100, 100, 100, 0.1);
-        border-bottom: 1.5px solid rgb(255, 255, 255);
-        border-right: 1.5px solid rgb(255, 255, 255);
-        opacity: 1;
-    }
-
-    92% {
-        color: rgb(24, 24, 24, 1);
-        background-color: rgba(240, 240, 240, 0.3);
-        border-bottom: 1.5px solid rgb(24, 24, 24);
-        border-right: 1.5px solid rgb(24, 24, 24);
-        text-shadow: 0 0 0px #00000000;
-        opacity: 1;
+    70%{
+        color: rgba(20, 20, 20, 0.8);
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.1);
     }
 }
-
-
