--- a/css/index.css
+++ b/css/index.css
@@ -89,14 +89,21 @@ body {
 .search-bar {
     padding: 5px 10px 5px 10px;
 
-    width: 480px;
-    height: 45px;
+    width: 500px;
+    height: 50px;
+    border-radius: 6px;
 
     font-size: 30px;
     color: rgba(40, 40, 40, 0.9);
 
+    
     background-color: rgba(255, 255, 255, 0.5);
-    border: 5px solid rgba(120, 120, 120, 0.9);
+    border: 0px;
+}
+
+.search-bar:focus {
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    outline: none;
 }
 
 /* .search-icon {
@@ -123,6 +130,11 @@ body {
     }
 
     70%{
+        color: rgba(20, 20, 20, 0.8);
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.1);
+    }
+
+    75%{
         color: rgba(20, 20, 20, 0.8);
         text-shadow: 0 0 7px rgba(255, 255, 255, 0.1);
     }
