--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,14 @@ a {
     text-decoration: none;
 }
 
-.background-img {
+.background-img, .translucent-layer, .contents {
     position: absolute;
-    z-index: 2;
-
     width: 100%;
-    height: 600px;
+    height: 100%;
+}
+
+.background-img {
+    z-index: 2;
 
     background-image: url("../images/place4.jpg");
     background-position-x: -20px; 
@@ -22,21 +24,13 @@ a {
 }
 
 .translucent-layer {
-    position: absolute;
     z-index: 3;
-
-    width: 100%;
-    height: 600px;
 
     background-color: rgba(58, 58, 58, 0.38);
 }
 
 .contents {
-    position: absolute;
     z-index: 4;
-    
-    width: 100%;
-    height: 600px;
 
     /* border: 1px solid red; */
 }
