--- a/css/index.css
+++ b/css/index.css
@@ -1,128 +1,147 @@
 
-body {
-    margin: 0;
-}
+@media all and (min-width: 0px) {
 
-a {
-    text-decoration: none;
-}
+    body {
+        margin: 0;
+    }
 
-.background-img, .translucent-layer{
-    position: fixed;
+    a {
+        text-decoration: none;
+    }
 
-    height: 100%;
-    width: 100%;
-}
+    .background-img, .translucent-layer{
+        position: fixed;
 
-.background-img {
-    z-index: 2;
+        height: 100%;
+        width: 100%;
+    }
 
-    background-image: url("../images/place4.jpg");
-    background-position-x: -20px; 
-    background-size: 110% 110%;
+    .background-img {
+        z-index: 2;
 
-    filter: blur(1.1px);
-}
+        background-image: url("../images/place4.jpg");
+        background-position-x: -20px; 
+        background-size: 110% 110%;
 
-.translucent-layer {
-    z-index: 3;
+        filter: blur(1.1px);
+    }
 
-    background-color: rgba(58, 58, 58, 0.38);
-}
+    .translucent-layer {
+        z-index: 3;
 
-.contents {
-    position: absolute;
-    z-index: 4;
+        background-color: rgba(58, 58, 58, 0.38);
+    }
 
-    width: 100%;
+    .contents {
+        position: absolute;
+        z-index: 4;
 
-    /* 임시 height */
-    height: 1000px;
+        width: 100%;
 
-    /* border: 1px solid red; */
-}
+        /* 임시 height */
+        height: 1000px;
 
-.top {
-    position: fixed;
-    right: 65px;
+        /* border: 1px solid red; */
+    }
 
-    margin: 8px 0 0 0;
-}
+    .top {
+        position: fixed;
+        right: 65px;
 
-.login-btn {
-    padding: 2px 7px 2px 7px;
+        margin: 8px 0 0 0;
+    }
 
-    font-size: 16px;
-    color: rgba(230, 230, 230, 1);
-    text-shadow: 0 0 3px rgba(222, 222, 222, 1);
+    .login-btn {
+        padding: 2px 7px 2px 7px;
 
-    border-radius: 6px;
-    /* border: 1px solid red; */
-}
+        font-size: 16px;
+        color: rgba(230, 230, 230, 1);
+        text-shadow: 0 0 3px rgba(222, 222, 222, 1);
 
-.login-btn:hover{
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(200, 200, 200, 0.5);
-}
+        border-radius: 6px;
+        /* border: 1px solid red; */
+    }
 
-.logo {
-    margin: 150px 0 0 0;
+    .login-btn:hover{
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(200, 200, 200, 0.5);
+    }
 
-    /* border: 1px solid red; */
-}
+    .logo {
+        margin: 150px 0 0 0;
 
-.logo-table {
-    width: 100%;
+        /* border: 1px solid red; */
+    }
 
-    text-align: center;
+    .logo-table {
+        width: 100%;
 
-    /* border: 1px solid red; */
-}
+        text-align: center;
 
-.logo-text { 
-    width: 500px;
+        /* border: 1px solid red; */
+    }
 
-    color: rgba(255, 255, 255, 0.6);
-    text-shadow: 0 0 7px rgba(222, 222, 222, 0.6);
-    font-size: 80px;
+    .logo-text { 
+        width: 500px;
 
-    animation: breath-color 16s infinite;
-    /* border: 1px solid red; */
-}
+        color: rgba(255, 255, 255, 0.6);
+        text-shadow: 0 0 7px rgba(222, 222, 222, 0.6);
+        font-size: 80px;
 
-.search {
-    margin: 50px 0 0 0;
+        animation: breath-color 16s infinite;
+        /* border: 1px solid red; */
+    }
 
-    text-align: center;
+    .search {
+        margin: 50px 0 140px 0;
 
-    /* border: 1px solid red; */
-}
+        text-align: center;
 
-.search-bar {
-    padding: 5px 10px 5px 10px;
+        /* border: 1px solid red; */
+    }
 
-    width: 500px;
-    height: 50px;
-    border-radius: 6px;
+    .search-bar {
+        padding: 5px 10px 5px 10px;
 
-    font-size: 30px;
-    color: rgba(40, 40, 40, 0.9);
+        width: 500px;
+        height: 50px;
+        border-radius: 6px;
 
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 0px;
-}
+        font-size: 30px;
+        color: rgba(40, 40, 40, 0.9);
 
-.search-bar:focus {
-    border: 1px solid rgba(255, 255, 255, 0.6);
-    outline: none;
-}
+        background-color: rgba(255, 255, 255, 0.5);
+        border: 0px;
+    }
 
-/* .search-icon {
-    padding: 10px;
-    color: white;
+    .search-bar:focus {
+        border: 1px solid rgba(255, 255, 255, 0.6);
+        outline: none;
+    }
 
-    border: 3px solid red;
-} */
+    /* .search-icon {
+        padding: 10px;
+        color: white;
+
+        border: 3px solid red;
+    } */
+
+    .stores{
+
+        /* border: 1px solid red; */
+    }
+
+    .store{
+        margin: 0 auto 0 auto;
+
+        width: 600px;
+        height: 60px;
+
+        background-color: rgba(255, 255, 255, 0.5);
+        border: 1px solid red;
+    }
+
+} /* max-width: 0px */
 
 @keyframes breath-color{
     0%{
