--- a/css/search.css
+++ b/css/search.css
@@ -1,52 +1,329 @@
 
-body{
-    margin-top: 0; 
-    padding: 0 90px 0 75px;
+@media all and (max-width: 768px) {
 
-    /* background-image: url("../images/item2.jpg");
-    background-position: 50%;
-    background-repeat: no-repeat; */
 }
 
-body::-webkit-scrollbar { 
-    display: none; 
-}
+@media all and (min-width: 768px) {
 
-.href-color:hover{
-   color: darkslategray; 
-}
+    body {
+        margin-top: 0; 
+        padding: 0 90px 0 75px;
 
-.main-item{
-    height: 30px;
-    padding: 10px 0 10px 0;
+        /* background-image: url("../images/item2.jpg");
+        background-position: 50%;
+        background-repeat: no-repeat; */
+    }
 
-    /* border: 1px solid red; */
-}
+    body::-webkit-scrollbar { 
+        display: none; 
+    }
 
-.store-name, .store-address{
-    margin: 0 200px 0 0;
+    a {
+        text-decoration: none;
+    }
 
-    font-size: 16px;
-
-    /* border: 1px solid red; */
-}
-
-.store-name{
-    margin-left: 15px;
-}
-
-.store-map{
-    margin-right: 15px;
-    float: right;
-    color: rgb(42, 42, 42);
+    hr {
+        width: 100%;
+        height: 2px;
     
-    /* border: 1px solid red; */
+        border: 0px;
+        background-color: gray;
+    }
+
+    .side-top, .side-bottom{
+        width: 100%;
+    }
+    
+    .side-top{
+        height: 25px;
+        border-top-left-radius: 10px;
+    
+        background-color: rgb(80, 80, 80);
+    }
+    
+    .side-bottom{
+        margin-top: 5px; 
+    
+        height: 55px;
+    
+        border-radius: 10px;
+        background-color: rgb(200, 150, 120);
+    }
+
+    .login-text {
+        /* line-height: 45%; */
+        padding: 0px 3px 0px 3px;
+        margin: 1px 60px 1px 0;
+        float: right;
+    
+        font-size: 16px;
+        color: white;
+        /* border: 1px solid red; */
+    }
+    
+    .login-text:hover{
+        text-decoration: underline;
+    }
+
+    .href-color:hover {
+        color: darkslategray; 
+    }
+
+    .search-bar {
+        /* 가운데 정렬 */
+        margin: 130px 0 0 auto;
+    
+        width: 480px;
+        height: 30px;
+        font-size: 18px;
+        border: 2px solid rgba(60, 60, 60, 0.8);
+        background-color: rgba(255, 255, 255, 0.8);
+    
+        padding: 8px 12px 8px 12px;
+    }
+    
+    .search-bar-icon{
+        /* 가운데 정렬 */
+        margin: 130px auto 0 0;
+    
+        width: 45px;
+        height: 36px;
+        padding: 7px 0 3px 7px;
+    
+        color: rgba(255, 255, 255, 0.7);
+        border: 2px solid rgba(60, 60, 60, 0.8);
+        background-color: rgba(180, 130, 100, 0.6);
+    
+        cursor: pointer;
+    }
+
+    .sub-logo {
+        /* 레이아웃 */
+        margin: 0px 40px 0 10px;
+        padding: 1px 0px 0px 1px;
+        min-width: 80px;
+        max-width: 140px;
+        height: 90px;
+        
+        font-size: 24px;
+        font-weight: bold;
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.1);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        opacity: 1;
+    
+        animation: breath-color 62s infinite;
+    
+        -webkit-touch-callout: none;
+        user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        /* border: 1px solid red; */
+    }
+
+    .search {
+        width: 100%;
+        margin-right: 160px;
+    
+        /* 가운데 정렬 */
+        display: flex;
+    
+        /* border: 1px solid red; */
+    }    
+
+    .logo-search {
+        width: 80%;
+        height: 240px;
+        margin: 0 auto 0 auto;
+        padding: 40px 15% 40px 5%;
+    
+        /* 가운데 정렬 */
+        display: flex;
+        visibility: visible;
+    
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    
+    
+        background-image: url("../images/place4.jpg");
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        /* border: 1px solid red; */
+    }
+
+    .main-item {
+        height: 30px;
+        padding: 10px 0 10px 0;
+
+        /* border: 1px solid red; */
+    }
+
+    .store-name, .store-address {
+        margin: 0 200px 0 0;
+
+        font-size: 16px;
+
+        /* border: 1px solid red; */
+    }
+
+    .store-name {
+        margin-left: 15px;
+    }
+
+    .store-map {
+        margin-right: 15px;
+        float: right;
+        color: rgb(42, 42, 42);
+        
+        /* border: 1px solid red; */
+    }
+
+    .base-color {
+    color: black;
+    }
+
+    input:focus{
+        outline: 0;
+    }
 }
 
-.base-color{
-   color: black;
-}
+@keyframes breath-color{
+    0% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.1);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        opacity: 1;
+    }
 
-input:focus{
-    outline: 0;
+    8% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    11% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    17% {
+        /* color: rgb(162, 183, 224); */
+        color: rgb(168, 240, 177);
+        background-color: rgba(120, 120, 120, 0.3);
+        border-bottom: 1.5px solid rgb(168, 240, 177);
+        border-right: 1.5px solid rgb(168, 240, 177);
+        text-shadow: 0 0 2px #000000;
+        opacity: 1;
+    }
+
+    25% {
+        /* color: rgb(162, 183, 224); */
+        color: rgb(168, 240, 177);
+        background-color: rgba(120, 120, 120, 0.1);
+        border-bottom: 1.5px solid rgba(168, 240, 177);
+        border-right: 1.5px solid rgba(168, 240, 177);
+        text-shadow: 0 0 2px #000000;
+        opacity: 0.8;
+    }
+
+    33% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    36% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    42% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.3);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        text-shadow: 0 0 0px #00000000;
+        opacity: 1;
+    }
+
+    50% {
+        color: rgb(24, 24, 24);
+        background-color: rgba(240, 240, 240, 0.1);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        opacity: 1;
+    }
+
+    58% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    61% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    67% {
+        color: rgb(241, 181, 166);
+        background-color: rgba(120, 120, 120, 0.3);
+        border-bottom: 1.5px solid rgb(241, 181, 166);
+        border-right: 1.5px solid rgb(241, 181, 166);
+        text-shadow: 0 0 2px #000000;
+        opacity: 1;
+    }
+
+    75% {
+        color: rgb(241, 181, 166);
+        background-color: rgba(120, 120, 120, 0.1);
+        border-bottom: 1.5px solid rgb(241, 181, 166);
+        border-right: 1.5px solid rgb(241, 181, 166);
+        text-shadow: 0 0 2px #000000;
+        opacity: 0.8;
+    }
+
+    83% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.3);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    86% {
+        color: rgba(255, 255, 255, 1);
+        background-color: rgba(100, 100, 100, 0.1);
+        border-bottom: 1.5px solid rgb(255, 255, 255);
+        border-right: 1.5px solid rgb(255, 255, 255);
+        opacity: 1;
+    }
+
+    92% {
+        color: rgb(24, 24, 24, 1);
+        background-color: rgba(240, 240, 240, 0.3);
+        border-bottom: 1.5px solid rgb(24, 24, 24);
+        border-right: 1.5px solid rgb(24, 24, 24);
+        text-shadow: 0 0 0px #00000000;
+        opacity: 1;
+    }
 }
