--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import "indexB.css";
+@import ".css";
 @import "login.css";
-@import "search.css";
 @import "menu.css";
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
