--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import ".css";
+@import "search.css";
 @import "login.css";
 @import "menu.css";
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
