--- a/css/.css
+++ b/css/.css
@@ -7,7 +7,7 @@
 
 } */
 
-@media all and (min-width: 728px) {
+@media all and (min-width: 728px) and (max-width: 1024px) {
 
     body {
         margin: 0;
@@ -62,7 +62,6 @@
 
         width: 100%;
 
-        /* 임시 height */
         height: 100%;
 
         /* border: 1px solid red; */
@@ -70,19 +69,60 @@
 
     .top {
         position: fixed;
-        right: 65px;
+        width: 100%;
+        height: 41px;
 
-        margin: 8px 0 0 0;
+        background-color:  rgba(0, 0, 0, 0);
+    }
+
+    .sub-top {
+        visibility: hidden;
+    }
+
+    .top-logo {
+        float: left;
+
+        margin: 3px 0 0 20px;
+        padding: 2px 7px 2px 7px;
+        font-size: 20px;
+        font-weight: 500;
+
+        color: white;
+
+        /* border: 1px solid red; */
+    }
+
+    .top-search-bar {
+        float: left;
+
+        margin: 5px 0 0 40px;
+        padding: 3px 10px 3px 10px;
+        width: 380px;
+        height: 25px;
+        font-size: 16px;
+        border-radius: 6px;
+
+        color: rgba(40, 40, 40, 0.9);
+        background-color: rgba(255, 255, 255, 0.6);
+
+        border: 0px;
+    }
+
+    .top-search-bar:focus {
+        outline: none;
     }
 
     .top-login-btn {
-        padding: 2px 7px 2px 7px;
+        float: right;
 
+        margin: 8px 20px 0 0;
+        padding: 2px 7px 2px 7px;
         font-size: 16px;
+        border-radius: 6px;
+
         color: rgba(230, 230, 230, 1);
         text-shadow: 0 0 3px rgba(222, 222, 222, 1);
 
-        border-radius: 6px;
         /* border: 1px solid red; */
     }
 
@@ -94,6 +134,8 @@
     .logo {
         margin: 180px 0 0 0;
 
+        /* position: fixed;
+        transition: top 0.2s ease-in-out; */
         /* border: 1px solid red; */
     }
 
@@ -151,7 +193,7 @@
     } */
 
     .stores {
-        margin: 160px 0 0 0;
+        margin: 300px 0 0 0;
         height: 500px;
 
         /* border: 1px solid red; */
@@ -228,11 +270,9 @@
         height: 28px;
     }
 
-    .store-name-result {
-        color: rgba(255, 255, 255);
-    }
+    .store-name-result, .store-address-result {
+        font-weight: 500;
 
-    .store-address-result {
         color: rgba(255, 255, 255);
     }
 
@@ -241,6 +281,71 @@
         height: 30px;
 
         color: rgba(255, 255, 255, 0.7);
+    }
+
+    .footer {
+        margin: 250px 0 0 0;
+        width: 100%;
+        height: 55px;
+        font-size: 20px;
+
+        font-weight: bold;
+
+        color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(0, 0, 0, 0.5);
+
+        /* border-top: 1px solid rgba(0, 0, 0, 0.9); */
+        /* border: 1px solid red; */
+    }
+
+    .footer-menu {
+        margin: 0 40px 0 40px;
+    }
+
+    .footer-menu > li {
+        float: left;
+        list-style: none;
+
+        margin: 18px 10px 0 10px;
+        font-size: 16px;
+    }
+
+    .footer-menu  a {
+        /* display: block; */
+        padding: 3px 5px 3px 5px;
+        /* height:40px; background:#c00; */
+        color:rgba(255, 255, 255, 0.9);
+        /* font-family:"돋움"; */
+    }
+
+    .footer-menu a:hover {
+        border-radius: 30px;
+        border: 2px solid rgba(255, 255, 255, 0.5);
+    }
+
+    .bottom-etc {
+        height: 22px;
+
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.5);
+        /* border: 1px solid red; */
+    }
+
+    .bottom-etc-menu {
+        margin: 0 40px 0 40px;
+    }
+
+    .bottom-etc-menu > li {
+        float: right;
+        list-style: none;
+
+        margin: 4px 10px 0 10px;
+        font-size: 9px;
+    }
+
+    .bottom-etc-menu  a {
+        padding: 3px 5px 3px 5px;
+        color:rgba(255, 255, 255, 0.7);
     }
 
 } /* max-width: 0px */
