--- a/css/.css
+++ b/css/.css
@@ -3,6 +3,15 @@ body {
     margin: 0;
 }
 
+.top, .logo, .store-title, .footer, .bottom-etc {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 a {
     text-decoration: none;
 }
